Installation of loggers